<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/module_status">
        <Preference
            android:key="check_status"
            android:title="@string/check_module_status"
            android:summary="@string/check_module_status_summary" />
            
        <Preference
            android:key="check_effectiveness"
            android:title="@string/check_effectiveness"
            android:summary="@string/check_effectiveness_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/config">
        <SwitchPreferenceCompat
            android:key="new_hiding_method"
            android:title="@string/new_hiding_method"
            android:summary="@string/new_hiding_method_summary"
            android:defaultValue="false" />

        <Preference
            android:key="reset_config"
            android:title="@string/reset_config"
            android:summary="@string/reset_config_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/restart_options">
        <SwitchPreferenceCompat
            android:key="restart_launcher"
            android:title="@string/restart_launcher"
            android:summary="@string/restart_launcher_summary"
            android:defaultValue="false" />
            
        <SwitchPreferenceCompat
            android:key="reset_settings"
            android:title="@string/reset_settings"
            android:summary="@string/reset_settings_summary"
            android:defaultValue="false" />
            
        <SwitchPreferenceCompat
            android:key="reset_system"
            android:title="@string/reset_system"
            android:summary="@string/reset_system_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">
        <Preference
            android:key="about"
            android:title="@string/about_app"
            android:summary="@string/about_app_summary" />
    </PreferenceCategory>

</PreferenceScreen> 